css/styles.css
body {
  background-color: #000;
  color: #ddd;
  font: 12px Verdana, sans-serif;
  margin: 0;
}

.wrapper {
  display: grid;
  grid-template-areas:
    "header header"
    "main aside"
    "footer footer";
  grid-template-columns: 75% 25%;
  grid-template-rows: auto;
  margin: auto;
  max-width: 1200px;
  padding: 10px;
}

.section {
  margin: 0;
  padding: 10px;
}

header {
  grid-area: header;
  text-align: center;
}

main {
  grid-area: main;
}

aside {
  grid-area: aside;
}

footer {
  grid-area: footer;
}

